[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,29 @@ body {
     height: 200px;
 }
 
+.container{
+    max-width: 800px;
+     margin: 0 auto;
+     font-family: sans-sarif;
+     padding-top: 60px;
+    padding-right: 150px;
+    padding-left: 20px;
+              } 
+              
+   .container1{
+                   max-width: 800px;
+                    margin: 0 auto;
+                    font-family: sans-sarif;
+                    padding-top: 60px;
+                    padding-right: 150px;
+                    padding-left: 50px;
+              }
+              
+        .container2{
+                   max-width: 800px;
+                    margin: 0 auto;
+                    font-family: sans-sarif;
+                    padding-top: 60px;
+                    padding-right: 150px;
+                    padding-left: 60px;
+              }  
